--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -662,10 +662,14 @@ Body:
   Translation: "关闭与角色数据库服务器的连接....\n"
 - Original: "Close Log DB Connection....\n"
   Translation: "关闭与日志数据库的连接....\n"
+- Original: "Close Log DB Server(async thread) Connection....\n"
+  Translation: "关闭与日志数据库的异步线程连接....\n"
 - Original: "Close Login DB Connection....\n"
   Translation: "关闭与登录数据库服务器的连接....\n"
 - Original: "Close Map DB Connection....\n"
   Translation: "关闭与地图服务器主数据库的连接....\n"
+- Original: "Close Map DB Server(async thread) Connection....\n"
+  Translation: "关闭与地图服务器主数据库的异步线程连接....\n"
 - Original: "Close Web DB Connection....\n"
   Translation: "关闭与 WEB 接口数据库服务器的连接....\n"
 - Original: "Closed connection from '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
@@ -692,8 +696,12 @@ Body:
   Translation: "正在连接到角色数据库服务器....\n"
 - Original: "Connect success! (Char Server Connection)\n"
   Translation: "连接成功! (已建立与角色数据库服务器之间的连接)\n"
+- Original: "Connect success! (Log DB Server(async thread) Connection)\n"
+  Translation: "连接成功! (已建立与日志数据库之间的异步线程连接)\n"
 - Original: "Connect success! (Login Server Connection)\n"
   Translation: "连接成功! (已建立与登录数据库服务器之间的连接)\n"
+- Original: "Connect success! (Map DB Server(async thread) Connection)\n"
+  Translation: "连接成功! (已建立与主数据库之间的异步线程连接)\n"
 - Original: "Connect success! (Map Server Connection)\n"
   Translation: "连接成功! (已建立与主数据库之间的连接)\n"
 - Original: "Connect success! (Web Server Connection)\n"
@@ -704,8 +712,12 @@ Body:
   Translation: "正在连接到 %d.%d.%d.%d 的 %i 端口\n"
 - Original: "Connecting to the Char DB server.....\n"
   Translation: "正在连接到角色数据库服务器....\n"
+- Original: "Connecting to the Log DB Server(async thread)....\n"
+  Translation: "正在连接到日志数据库服务器 (异步线程连接)....\n"
 - Original: "Connecting to the Login DB server.....\n"
   Translation: "正在连接到登录数据库服务器....\n"
+- Original: "Connecting to the Map DB Server(async thread)....\n"
+  Translation: "正在连接到主数据库服务器 (异步线程连接)....\n"
 - Original: "Connecting to the Map DB Server....\n"
   Translation: "正在连接到主数据库服务器....\n"
 - Original: "Connecting to the Web DB server.....\n"
@@ -3030,6 +3042,12 @@ Body:
   Translation: ""
 - Original: "buildin_getpartymember: The array %s is not string type.\n"
   Translation: ""
+- Original: "buildin_getquesttime: Character %d doesn't have quest %d.\n"
+  Translation: ""
+- Original: "buildin_getquesttime: Invaild type for quest time.\n"
+  Translation: ""
+- Original: "buildin_getquesttime: Quest %d not found in DB.\n"
+  Translation: ""
 - Original: "buildin_getrandgroupitem: Invalid group id (%d)!\n"
   Translation: ""
 - Original: "buildin_getrandomoptinfo: Invalid attribute type %d (Max %d).\n"
@@ -3268,6 +3286,8 @@ Body:
   Translation: ""
 - Original: "buildin_npcshopupdate: Attempt to update empty shop from '%s'.\n"
   Translation: ""
+- Original: "buildin_npcshopupdate: Invalid stock amount in marketshop '%s'.\n"
+  Translation: ""
 - Original: "buildin_npcskill: Invalid skill ID %d.\n"
   Translation: ""
 - Original: "buildin_npcskill: Invalid skill name %s.\n"
@@ -3327,6 +3347,8 @@ Body:
 - Original: "buildin_pvpon: Unknown map '%s'.\n"
   Translation: ""
 - Original: "buildin_query_logsql: SQL logs are disabled, query '%s' will not be executed.\n"
+  Translation: ""
+- Original: "buildin_query_logsql_async: SQL logs are disabled, query '%s' will not be executed.\n"
   Translation: ""
 - Original: "buildin_questinfo: No NPC attached.\n"
   Translation: ""
@@ -3577,6 +3599,8 @@ Body:
 - Original: "buildin_warpportal: NPC is needed\n"
   Translation: ""
 - Original: "buildin_warpportal: Target map not found %s.\n"
+  Translation: ""
+- Original: "builtin_npcshopadditem: Invalid stock amount in marketshop '%s'.\n"
   Translation: ""
 - Original: "builtin_npcshopadditem: Item ID %u does not exist.\n"
   Translation: "builtin_npcshopadditem: 物品编号 %u 不存在于数据库中.\n"
@@ -4504,7 +4528,7 @@ Body:
   Translation: ""
 - Original: "npc_get_script_event_name: npce_index is outside the array limits: %d (max: %d).\n"
   Translation: ""
-- Original: "npc_market_checkall_sub: NPC '%s' does not sell item %u (qty %hu), deleting...\n"
+- Original: "npc_market_checkall_sub: NPC '%s' does not sell item %u (qty %d), deleting...\n"
   Translation: ""
 - Original: "npc_market_checkall_sub: NPC '%s' is not proper for market, removing...\n"
   Translation: ""
@@ -4604,7 +4628,7 @@ Body:
   Translation: ""
 - Original: "npc_parse_shop: Item %s [%u] is being sold for FREE in file '%s', line '%d'.\n"
   Translation: ""
-- Original: "npc_parse_shop: Item %s [%u] is stocked with invalid value %d, changed to 1. File '%s', line '%d'.\n"
+- Original: "npc_parse_shop: Item %s [%u] is stocked with invalid value %hd, changed to unlimited (-1). File '%s', line '%d'.\n"
   Translation: ""
 - Original: "npc_parse_shop: coordinates %d/%d are out of bounds in map %s(%dx%d), in file '%s', line '%d'\n"
   Translation: ""
@@ -5219,6 +5243,14 @@ Body:
 - Original: "script:query_sql: Too many variables (%u extra).\n"
   Translation: ""
 - Original: "script:query_sql: not a variable\n"
+  Translation: ""
+- Original: "script:query_sql_async: Only %d/%u rows have been stored.\n"
+  Translation: ""
+- Original: "script:query_sql_async: Too many columns, discarding last %u columns.\n"
+  Translation: ""
+- Original: "script:query_sql_async: Too many variables (%u extra).\n"
+  Translation: ""
+- Original: "script:query_sql_async: not a variable\n"
   Translation: ""
 - Original: "script:replacestr: Invalid count value. Expected int got string\n"
   Translation: ""
