实现 restore_mes_logic 选项, 用于使新客户端的 mes 指令执行经典换行策略

--- a/conf/battle/pandas.conf
+++ b/conf/battle/pandas.conf
@@ -361,4 +361,14 @@ dead_area_size: 28
 // 默认值为: yes
 remove_manhole_with_status: yes
 
+// 是否使 2021-11-17 客户端的 mes 指令使用经典换行策略? [开关选项]
+// 
+// 在新客户端中, 如果 mes 显示的字符串以空格开头且上一行有位置可以放下这次显示的文本,
+// 那么这一行文本将会被追加到上一行文本的末尾. 这可能会打乱很多脚本的精心排版.
+// 详情可见: https://blog.pandas.ws/changes-of-mes-on-20211117-client/
+//
+// 启用此选项后熊猫模拟器将迫使 mes 指令继续遵循以前的换行策略.
+// 默认值为: yes
+restore_mes_logic: yes
+
 // PYHELP - BATTLECONFIG - INSERT POINT - <Section 4>
