--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -3,20 +3,18 @@ name: Build And Test
 on:
   push:
     branches: [master, develop]
-    paths-ignore:
-      - '**/*.md'
-      - '**/*.gitignore'
-      - '**/*.gitattributes'
-      - 'doc/**'
-      - 'tools/python/**'
+    paths:
+      - '.github/workflows/**'
+      - 'tools/integration/**'
+      - 'src/**'
+      - '3rdparty/**'
   pull_request:
     branches: [master, develop]
-    paths-ignore:
-      - '**/*.md'
-      - '**/*.gitignore'
-      - '**/*.gitattributes'
-      - 'doc/**'
-      - 'tools/python/**'
+    paths:
+      - '.github/workflows/**'
+      - 'tools/integration/**'
+      - 'src/**'
+      - '3rdparty/**'
 
 env:
   DB_ROOT: root
@@ -60,7 +58,7 @@ jobs:
       - name: Preparing dependencies
         run: |
           ./tools/integration/retry.sh sudo apt-get update -y
-          ./tools/integration/retry.sh sudo apt-get install mysql-client libmysqlclient-dev zlib1g-dev libpcre3-dev -y
+          ./tools/integration/retry.sh sudo apt-get install libmysqlclient-dev zlib1g-dev libpcre3-dev -y
 
       - name: Setup gcc compiler
         uses: egor-tensin/setup-gcc@v1
@@ -152,7 +150,7 @@ jobs:
       - name: Preparing dependencies
         run: |
           ./tools/integration/retry.sh sudo apt-get update -y
-          ./tools/integration/retry.sh sudo apt-get install mysql-client libmysqlclient-dev zlib1g-dev libpcre3-dev -y
+          ./tools/integration/retry.sh sudo apt-get install libmysqlclient-dev zlib1g-dev libpcre3-dev -y
 
       - name: Setup clang compiler
         uses: egor-tensin/setup-clang@v1
@@ -210,74 +208,3 @@ jobs:
           ./login-server --run-once
           ./char-server --run-once
           ./map-server --run-once
-
-#  windows:
-#    name: VS2019
-#    runs-on: windows-2019
-#
-#    strategy:
-#      matrix:
-#        define_constants: ['BUILDBOT', 'BUILDBOT;PRERE']
-#        configuration: ['Debug'] # 'Release'
-#        platform: ['Win32', 'x64']
-#        packetver: ['PACKETVER=20180620', 'PACKETVER=20210107;PACKETVER_RE']
-#
-#    steps:
-#      - name: Checkout repository
-#        uses: actions/checkout@v2
-#        with:
-#          fetch-depth: 1
-#
-#      - name: Preparing dependencies
-#        run: |
-#          choco install mysql --version=8.0.26
-#
-#      - name: Setup msbuild compiler
-#        uses: microsoft/setup-msbuild@v1.1
-#
-#      - name: Generate cache hash information
-#        run: |
-#          echo "${{ runner.os }}" >> .CACHE_HASHFILE
-#          msbuild --version --nologo >> .CACHE_HASHFILE
-#          echo "${{ matrix.configuration }}" >> .CACHE_HASHFILE
-#          echo "${{ matrix.define_constants }}" >> .CACHE_HASHFILE
-#          echo "${{ matrix.packetver }}" >> .CACHE_HASHFILE
-#          echo "${{ hashFiles('3rdparty/boost/bootstrap.sh') }}" >> .CACHE_HASHFILE
-#          echo "${{ hashFiles('3rdparty/boost/Jamroot') }}" >> .CACHE_HASHFILE
-#          echo "${{ env.CACHE_VERSION }}" >> .CACHE_HASHFILE
-#          cat .CACHE_HASHFILE
-#
-#      - name: Cache boost c++ libraries
-#        uses: actions/cache@v2
-#        id: cache-boost
-#        env:
-#          cache-name: cache-boost
-#        with:
-#          path: |
-#            3rdparty/boost/bin.v2/
-#            3rdparty/boost/stage/
-#            3rdparty/boost/b2.exe
-#          key: ${{ env.cache-name }}-${{ hashFiles('.CACHE_HASHFILE') }}
-#
-#      - name: Build boost c++ libraries
-#        if: steps.cache-boost.outputs.cache-hit != 'true'
-#        run: |
-#          cd 3rdparty/boost/
-#          ./bootstrap.bat
-#
-#      - name: Build Pandas
-#        run: |
-#          msbuild rAthena.sln /p:DefineConstants="${{ matrix.define_constants }};${{ matrix.packetver }}" /p:Configuration="${{ matrix.configuration }}" /p:Platform="${{ matrix.platform }}" -verbosity:minimal -maxCpuCount
-#        shell: cmd
-#
-#      - name: Preparing the runtime environment
-#        run: |
-#          ./tools/integration/setup_sql_8.0.bat
-#          ./tools/integration/enable_npc.bat
-#        shell: cmd
-#
-#      - name: Launch Pandas
-#        run: |
-#          ./login-server --run-once
-#          ./char-server --run-once
-#          ./map-server --run-once
