更新配置选项的说明 [skip ci]

--- a/conf/battle/pandas.conf
+++ b/conf/battle/pandas.conf
@@ -369,6 +369,10 @@ remove_manhole_with_status: yes
 // 那么这一行文本将会被追加到上一行文本的末尾. 这可能会打乱很多脚本的精心排版.
 // 详情可见: https://blog.pandas.ws/changes-of-mes-on-20211117-client/
 //
+// 注意: 此选项使用的方法只能完美的处理 langtype = 3 (简体中文)
+// 在 langtype = 4 (繁体中文) 下虽然能换行, 但是看起来会多一个空格导致错位,
+// 可能是字体或者客户端针对 langtype = 4 的处理逻辑差异导致.
+//
 // 启用此选项后熊猫模拟器将迫使 mes 指令继续遵循以前的换行策略.
 // 默认值为: yes
 restore_mes_logic: yes
