实现 restore_mes_logic 选项, 用于使新客户端的 mes 指令执行经典换行策略 (#500)

--- a/conf/battle/pandas.conf
+++ b/conf/battle/pandas.conf
@@ -361,4 +361,20 @@ dead_area_size: 28
 // 默认值为: yes
 remove_manhole_with_status: yes
 
+// 是否使新版客户端在执行 mes 指令时使用经典换行策略? [开关选项]
+// 上述的新版客户端是指 2021-11-03 及更新的客户端
+// 
+// 在新版客户端中, 如果 mes 显示的字符串以空格开头,
+// 且上一行有位置可以放下这次显示的文本,
+// 那么这一行文本将会被追加到上一行文本的末尾. 这可能会打乱很多脚本的精心排版.
+// 详情可见: https://blog.pandas.ws/changes-of-mes-on-20211117-client/
+//
+// 注意: 此选项使用的方法只能完美的处理 langtype = 3 (简体中文)
+// 在 langtype = 4 (繁体中文) 下虽然能换行, 但是看起来会多一个空格导致错位,
+// 可能是字体或者客户端针对 langtype = 4 的处理逻辑差异导致.
+//
+// 启用此选项后熊猫模拟器将迫使 mes 指令继续遵循以前的换行策略.
+// 默认值为: yes
+restore_mes_logic: yes
+
 // PYHELP - BATTLECONFIG - INSERT POINT - <Section 4>
