实现 itemdb_warning_policy 选项, 用于禁用加载物品数据库时的一些警告信息

--- a/conf/battle/pandas.conf
+++ b/conf/battle/pandas.conf
@@ -377,4 +377,18 @@ remove_manhole_with_status: yes
 // 默认值为: yes
 restore_mes_logic: yes
 
+// 是否关闭加载物品数据库时的一些警告信息? [掩码选项]
+// 警告通常都意味着风险, 但有的时候解决一个警告会意味着大量的劳动
+// 如果您真的知道自己关闭的警告隐含的风险可能会发生的话,
+// 那么可以在这里直接屏蔽掉警告信息.
+//
+//  0 = 不屏蔽任何警告
+// &1 = 当武器没有在 item_db 中指定 WeaponLevel 字段时视为 1 级武器且屏蔽警告
+//      注意: 武器等级与精炼系统相关, 请知道自己在做什么再关闭警告
+// &2 = 当防具没有在 item_db 中指定 ArmorLevel  字段时视为 1 级防具且屏蔽警告
+//      注意: 防具等级与精炼系统相关, 请知道自己在做什么再关闭警告
+//
+// 默认值为: 0
+itemdb_warning_policy: 0
+
 // PYHELP - BATTLECONFIG - INSERT POINT - <Section 4>
