--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -1323,11 +1323,11 @@ Body:
 - Original: "Item %s does not exist.\n"
   Translation: ""
 - Original: "Item %s is a weapon, but does not have a weapon level. Consider adding it. Defaulting to 1.\n"
-  Translation: ""
+  Translation: "物品 %s 是一件武器, 但物品資料庫中並沒有指定它的武器等級. 預設為 1 級武器.\n"
 - Original: "Item %s is a weapon, but has an armor level. Defaulting to 0.\n"
   Translation: ""
 - Original: "Item %s is an armor, but does not have an armor level. Consider adding it. Defaulting to 1.\n"
-  Translation: ""
+  Translation: "物品 %s 是一件防具, 但物品資料庫中並沒有指定它的防具等級. 預設為 1 級防具.\n"
 - Original: "Item %s is an armor, but has a weapon level. Defaulting to 0.\n"
   Translation: ""
 - Original: "Item %s is not a weapon, but has a weapon level. Defaulting to 0.\n"
