--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -1323,11 +1323,11 @@ Body:
 - Original: "Item %s does not exist.\n"
   Translation: ""
 - Original: "Item %s is a weapon, but does not have a weapon level. Consider adding it. Defaulting to 1.\n"
-  Translation: ""
+  Translation: "物品 %s 是一件武器, 但物品数据库中并没有指定它的武器等级. 默认为 1 级武器.\n"
 - Original: "Item %s is a weapon, but has an armor level. Defaulting to 0.\n"
   Translation: ""
 - Original: "Item %s is an armor, but does not have an armor level. Consider adding it. Defaulting to 1.\n"
-  Translation: ""
+  Translation: "物品 %s 是一件防具, 但物品数据库中并没有指定它的防具等级. 默认为 1 级防具.\n"
 - Original: "Item %s is an armor, but has a weapon level. Defaulting to 0.\n"
   Translation: ""
 - Original: "Item %s is not a weapon, but has a weapon level. Defaulting to 0.\n"
