--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -326,6 +326,8 @@ Body:
   Translation: "%s: 指定的戰鬥記錄型別無效, 請檢查.\n"
 - Original: "%s: The counter name '%s' is not exists, please initialize before using.\n"
   Translation: "%s: 效能計數器 '%s' 不存在, 在使用之前請先初始化它.\n"
+- Original: "%s: The script that was resumed has been released, please report this to the developer (Trigger Point: %d).\n"
+  Translation: "%s: 發現準備執行的指令碼程式碼已被提前釋放, 程式靈巧的躲過了一次崩潰, 請將資訊上報給開發者 (崩潰觸發點: %d).\n"
 - Original: "%s: Title System it requires PACKETVER 2015-05-13 or newer...\n"
   Translation: ""
 - Original: "%s: Too many subnets defined, skipping line %d...\n"
