规避在 map_addblock 和 map_delblock 因检查不严而导致崩溃的问题

--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -4298,8 +4298,16 @@ Body:
   Translation: ""
 - Original: "map_addblock: invalid map id (%d), only %d are loaded.\n"
   Translation: ""
+- Original: "map_addblock: mapdata block is invalid (map name: \"%s\").\n"
+  Translation: "map_addblock: 目標地圖 \"%s\" 的資料區塊無效.\n"
 - Original: "map_addblock: out-of-bounds coordinates (\"%s\",%d,%d), map is %dx%d\n"
-  Translation: ""
+  Translation: "map_addblock: 超出範圍的座標. 預期將遊戲單位放在 \"%s\" 的 %d,%d 座標, 但地圖的實際尺寸僅有 %d x %d.\n"
+- Original: "map_addblock: trying to add a block into freed instance map (src map: \"%s\").\n"
+  Translation: "map_addblock: 正在嘗試新增遊戲單位到一張已經被釋放的副本地圖 (原始地圖: \"%s\").\n"
+- Original: "map_addblock: trying to add a block into freed instance map.\n"
+  Translation: "map_addblock: 正在嘗試新增遊戲單位到一張已經被釋放的副本地圖.\n"
+- Original: "map_addblock: trying to add a block into non-existent map (map id: %d,%d,%d).\n"
+  Translation: "map_addblock: 正在嘗試新增遊戲單位到一張已經不存在的地圖 (地圖編號: %d, X 座標: %d, Y 座標: %d).\n"
 - Original: "map_addinstancemap failed. map_num(%d) > map_max(%d)\n"
   Translation: ""
 - Original: "map_addinstancemap: Map name \"%s\" is too long.\n"
@@ -4312,6 +4320,14 @@ Body:
   Translation: ""
 - Original: "map_delblock error : bl->next!=NULL\n"
   Translation: ""
+- Original: "map_delblock: mapdata block is invalid (map name: \"%s\").\n"
+  Translation: "map_delblock: 目標地圖 \"%s\" 的資料區塊無效.\n"
+- Original: "map_delblock: trying to remove a block from freed instance map (src map: \"%s\").\n"
+  Translation: "map_delblock: 正在嘗試從一張已被釋放的副本地圖移除遊戲單位 (原始地圖: \"%s\").\n"
+- Original: "map_delblock: trying to remove a block from freed instance map.\n"
+  Translation: "map_delblock: 正在嘗試從一張已被釋放的副本地圖移除遊戲單位.\n"
+- Original: "map_delblock: trying to remove a block from non-existent map (map id: %d).\n"
+  Translation: "map_delblock: 正在嘗試從一張已經不存在的地圖移除遊戲單位 (地圖編號: %d).\n"
 - Original: "map_forcountinarea: block count too many!\n"
   Translation: ""
 - Original: "map_forcountinrange: block count too many!\n"
