--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -4298,8 +4298,16 @@ Body:
   Translation: ""
 - Original: "map_addblock: invalid map id (%d), only %d are loaded.\n"
   Translation: ""
+- Original: "map_addblock: mapdata block is invalid (map name: \"%s\").\n"
+  Translation: "map_addblock: 目标地图 \"%s\" 的数据区块无效.\n"
 - Original: "map_addblock: out-of-bounds coordinates (\"%s\",%d,%d), map is %dx%d\n"
-  Translation: ""
+  Translation: "map_addblock: 超出范围的坐标. 预期将游戏单位放在 \"%s\" 的 %d,%d 坐标, 但地图的实际尺寸仅有 %d x %d.\n"
+- Original: "map_addblock: trying to add a block into freed instance map (src map: \"%s\").\n"
+  Translation: "map_addblock: 正在尝试添加游戏单位到一张已经被释放的副本地图 (原始地图: \"%s\").\n"
+- Original: "map_addblock: trying to add a block into freed instance map.\n"
+  Translation: "map_addblock: 正在尝试添加游戏单位到一张已经被释放的副本地图.\n"
+- Original: "map_addblock: trying to add a block into non-existent map (map id: %d,%d,%d).\n"
+  Translation: "map_addblock: 正在尝试添加游戏单位到一张已经不存在的地图 (地图编号: %d, X 坐标: %d, Y 坐标: %d).\n"
 - Original: "map_addinstancemap failed. map_num(%d) > map_max(%d)\n"
   Translation: ""
 - Original: "map_addinstancemap: Map name \"%s\" is too long.\n"
@@ -4312,6 +4320,14 @@ Body:
   Translation: ""
 - Original: "map_delblock error : bl->next!=NULL\n"
   Translation: ""
+- Original: "map_delblock: mapdata block is invalid (map name: \"%s\").\n"
+  Translation: "map_delblock: 目标地图 \"%s\" 的数据区块无效.\n"
+- Original: "map_delblock: trying to remove a block from freed instance map (src map: \"%s\").\n"
+  Translation: "map_delblock: 正在尝试从一张已被释放的副本地图移除游戏单位 (原始地图: \"%s\").\n"
+- Original: "map_delblock: trying to remove a block from freed instance map.\n"
+  Translation: "map_delblock: 正在尝试从一张已被释放的副本地图移除游戏单位.\n"
+- Original: "map_delblock: trying to remove a block from non-existent map (map id: %d).\n"
+  Translation: "map_delblock: 正在尝试从一张已经不存在的地图移除游戏单位 (地图编号: %d).\n"
 - Original: "map_forcountinarea: block count too many!\n"
   Translation: ""
 - Original: "map_forcountinrange: block count too many!\n"
