修正两处近期反馈相对比较集中的地图服务器崩溃 (#518)
* 修正脚本引擎在定时器唤醒后可能导致的潜在崩溃
* 规避在 map_addblock 和 map_delblock 因检查不严而导致崩溃的问题

--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -326,6 +326,8 @@ Body:
   Translation: "%s: 指定的战斗记录类型无效, 请检查.\n"
 - Original: "%s: The counter name '%s' is not exists, please initialize before using.\n"
   Translation: "%s: 性能计数器 '%s' 不存在, 在使用之前请先初始化它.\n"
+- Original: "%s: The script that was resumed has been released, please report this to the developer (Trigger Point: %d).\n"
+  Translation: "%s: 发现准备执行的脚本代码已被提前释放, 程序灵巧的躲过了一次崩溃, 请将信息上报给开发者 (崩溃触发点: %d).\n"
 - Original: "%s: Title System it requires PACKETVER 2015-05-13 or newer...\n"
   Translation: ""
 - Original: "%s: Too many subnets defined, skipping line %d...\n"
@@ -4296,8 +4298,16 @@ Body:
   Translation: ""
 - Original: "map_addblock: invalid map id (%d), only %d are loaded.\n"
   Translation: ""
+- Original: "map_addblock: mapdata block is invalid (map name: \"%s\").\n"
+  Translation: "map_addblock: 目标地图 \"%s\" 的数据区块无效.\n"
 - Original: "map_addblock: out-of-bounds coordinates (\"%s\",%d,%d), map is %dx%d\n"
-  Translation: ""
+  Translation: "map_addblock: 超出范围的坐标. 预期将游戏单位放在 \"%s\" 的 %d,%d 坐标, 但地图的实际尺寸仅有 %d x %d.\n"
+- Original: "map_addblock: trying to add a block into freed instance map (src map: \"%s\").\n"
+  Translation: "map_addblock: 正在尝试添加游戏单位到一张已经被释放的副本地图 (原始地图: \"%s\").\n"
+- Original: "map_addblock: trying to add a block into freed instance map.\n"
+  Translation: "map_addblock: 正在尝试添加游戏单位到一张已经被释放的副本地图.\n"
+- Original: "map_addblock: trying to add a block into non-existent map (map id: %d,%d,%d).\n"
+  Translation: "map_addblock: 正在尝试添加游戏单位到一张已经不存在的地图 (地图编号: %d, X 坐标: %d, Y 坐标: %d).\n"
 - Original: "map_addinstancemap failed. map_num(%d) > map_max(%d)\n"
   Translation: ""
 - Original: "map_addinstancemap: Map name \"%s\" is too long.\n"
@@ -4310,6 +4320,14 @@ Body:
   Translation: ""
 - Original: "map_delblock error : bl->next!=NULL\n"
   Translation: ""
+- Original: "map_delblock: mapdata block is invalid (map name: \"%s\").\n"
+  Translation: "map_delblock: 目标地图 \"%s\" 的数据区块无效.\n"
+- Original: "map_delblock: trying to remove a block from freed instance map (src map: \"%s\").\n"
+  Translation: "map_delblock: 正在尝试从一张已被释放的副本地图移除游戏单位 (原始地图: \"%s\").\n"
+- Original: "map_delblock: trying to remove a block from freed instance map.\n"
+  Translation: "map_delblock: 正在尝试从一张已被释放的副本地图移除游戏单位.\n"
+- Original: "map_delblock: trying to remove a block from non-existent map (map id: %d).\n"
+  Translation: "map_delblock: 正在尝试从一张已经不存在的地图移除游戏单位 (地图编号: %d).\n"
 - Original: "map_forcountinarea: block count too many!\n"
   Translation: ""
 - Original: "map_forcountinrange: block count too many!\n"
