实现 monster_damagemotion_min 选项, 用于控制魔物数据的动画速度时间最小值

--- a/conf/battle/pandas.conf
+++ b/conf/battle/pandas.conf
@@ -391,4 +391,15 @@ restore_mes_logic: yes
 // 默认值为: 0
 itemdb_warning_policy: 0
 
+// 怪物伤害动画速度时间最小值 (单位: 毫秒)
+// 用于解决怪物未拥有动画延迟时间, 可能会导致伤害延迟表现或强制角色施放动作等问题.
+//
+// 目前已知会强制角色施放动作的技能
+// 刀刃之舞 (SHC_DANCING_KNIFE)
+// 
+// 仅适用于未设置 DamageMotion 节点的怪物
+//
+// 默认值为: 0 (表示不开启)
+monster_damagemotion_min: 0
+
 // PYHELP - BATTLECONFIG - INSERT POINT - <Section 4>
