--- a/db/item_db.yml
+++ b/db/item_db.yml
@@ -93,5 +93,6 @@ Footer:
     Mode: Prerenewal
   - Path: db/re/item_db.yml
     Mode: Renewal
-  - Path: db/pandas/item_db.yml
+  - Path: db/pandas/re/item_db.yml
+    Mode: Renewal
   - Path: db/import/item_db.yml
