调整选项名称、完善选项注释

--- a/conf/battle/pandas.conf
+++ b/conf/battle/pandas.conf
@@ -391,15 +391,23 @@ restore_mes_logic: yes
 // 默认值为: 0
 itemdb_warning_policy: 0
 
-// 怪物伤害动画速度时间最小值 (单位: 毫秒)
-// 用于解决怪物未拥有动画延迟时间, 可能会导致伤害延迟表现或强制角色施放动作等问题.
-//
-// 目前已知会强制角色施放动作的技能
-// 刀刃之舞 (SHC_DANCING_KNIFE)
+// 当魔物被攻击时受伤动画的默认播放时长, 值越小看起来越快 (单位: 毫秒)
+// 注意: 若魔物在 mob_db 中没有设定 DamageMotion 字段时, 将采用此处设定的数值
 // 
-// 仅适用于未设置 DamageMotion 节点的怪物
+// 将此选项设置为 1 可用于解决部分技能在攻击 DamageMotion 为 0 的魔物时,
+// 可能会出现的以下异常现象:
+// 
+// - 明明已经发生了暴击, 但是伤害数字没有显示暴击的红色气泡
+// - 客户端无法正常播放攻击者角色的施法动作 (比如连续播放普通攻击动画)
 //
-// 默认值为: 0 (表示不开启)
-monster_damagemotion_min: 0
+// 目前已知会强制角色施放连续普通攻击动作的技能:
+// - 刀刃之舞 (SHC_DANCING_KNIFE) 用这个技能去打首都的测试用魔物蛋, 即可触发问题
+//
+// 温馨提示:
+// 修改此选项之后, 必须使用 @reloadmobdb 指令进行重载才能生效.
+// 若您启用了疾风缓存, 在当前的版本中必须先手动删除 db/cache 目录后再使用指令重载.
+//
+// 默认值为: 0 (表示不开启, 开启的话建议设置为 1)
+mob_default_damagemotion: 0
 
 // PYHELP - BATTLECONFIG - INSERT POINT - <Section 4>
