添加一个战斗配置选项用来控制此逻辑是否生效, 默认生效

--- a/conf/battle/pandas.conf
+++ b/conf/battle/pandas.conf
@@ -391,4 +391,25 @@ restore_mes_logic: yes
 // 默认值为: 0
 itemdb_warning_policy: 0
 
+// 是否高优先级持久化保存 setunitdata 对魔物的设置? [开关选项]
+// 在使用 setunitdata 去改变魔物 UMOB_ATKMIN, UMOB_MATKMIN 等数值时,
+// 会在魔物进行能力重算时导致这些改变被丢失, 这肯定不是大家希望看到的.
+//
+// 例如:
+// 您召唤一只血量不至于被死亡投射技能秒杀的魔物,
+// 并使用 setunitdata 将它的 UMOB_MAXHP 设置为 1000000,
+// 随后使用魔物情报技能确认魔物的当前血量后, 
+// 使用四转技能死亡投射 (AG_DEADLY_PROJECTION) 对该魔物使用,
+// 会发现该魔物的的最大 HP 已经回到默认了.
+// 
+// 因此熊猫做了一些改动, 来确保你对魔物的 setunitdata 可以被高优先级保存下来, 
+// 哪怕魔物进行了能力重算, 也会重新应用你之前对它的 setunitdata 设定.
+//
+// 这部分改动的影响范围尽管已经在研发人员尽可能论证后进行调整,
+// 但依然没有勇气确保 100% 没有任何后遗症,
+// 因此我们保留了一个选项, 必要时您可以通过将该选项改成 no 来关闭此逻辑.
+//
+// 默认值为: yes
+mob_setunitdata_persistence: yes
+
 // PYHELP - BATTLECONFIG - INSERT POINT - <Section 4>
