--- a/conf/msg_conf/char_msg_chs.conf
+++ b/conf/msg_conf/char_msg_chs.conf
@@ -19,7 +19,7 @@
 5: 商人
 6: 盗贼
 7: 骑士
-8: 牧师
+8: 祭司
 9: 巫师
 10: 铁匠
 11: 猎人
@@ -28,14 +28,14 @@
 14: 武僧
 15: 贤者
 16: 流氓
-17: 炼金术士
-18: 诗人
+17: 炼金术师
+18: 吟游诗人
 19: 舞娘
-20: 服装-婚礼
+20: 婚礼服饰
 21: 超级初学者
 22: 神枪手
 23: 忍者
-24: 服装-圣诞节
+24: 圣诞节服饰
 25: 进阶初学者
 26: 进阶剑士
 27: 进阶魔法师
@@ -68,7 +68,7 @@
 50: 商人宝宝
 51: 盗贼宝宝
 52: 骑士宝宝
-53: 牧师宝宝
+53: 祭司宝宝
 54: 巫师宝宝
 55: 铁匠宝宝
 56: 猎人宝宝
@@ -77,60 +77,60 @@
 59: 武僧宝宝
 60: 贤者宝宝
 61: 流氓宝宝
-62: 炼金术士宝宝
-63: 诗人宝宝
+62: 炼金术师宝宝
+63: 吟游诗人宝宝
 64: 舞娘宝宝
 65: 超级初学者宝宝
-66: 跆拳道
+66: 跆拳少年
 67: 拳圣
 68: 悟灵士
 //79: FREE
 //70: FREE
-71: 服装-盛夏
+71: 盛夏服饰
 72: Gangsi
-73: 死亡骑士
-74: 黑暗收集者
-75: 符文骑士
-76: 大法师
+73: Death Knight
+74: Dark Collector
+75: 卢恩骑士
+76: 咒术士
 77: 游侠
 78: 大主教
-79: 机匠
-80: 十字切割者
-81: 皇家卫士
-82: 元素使
+79: 机械工匠
+80: 十字斩首者
+81: 皇家禁卫队
+82: 妖术师
 83: 宫廷乐师
 //83: Maestro //IRO Name
-84: 漫游舞者
+84: 浪姬舞者
 85: 修罗
 86: 基因学者
 //86: Geneticist //IRO Name
-87: 逐影
-88: 符文骑士宝宝
-89: 大法师宝宝
+87: 魅影追踪者
+88: 卢恩骑士宝宝
+89: 咒术士宝宝
 90: 游侠宝宝
 91: 大主教宝宝
-92: 机匠宝宝
-93: 十字切割者宝宝
-94: 皇家卫士宝宝
-95: 元素使宝宝
+92: 机械工匠宝宝
+93: 十字斩首者宝宝
+94: 皇家禁卫队宝宝
+95: 妖术师宝宝
 96: 宫廷乐师宝宝
-97: 漫游舞者宝宝
+97: 浪姬舞者宝宝
 98: 修罗宝宝
 99: 基因学者宝宝
-100: 逐影宝宝
+100: 魅影追踪者宝宝
 101: 进阶超级初学者
 102: 进阶超级初学者宝宝
 103: 影狼
 104: 胧
-105: 服装-韩服
+105: 韩国服饰
 106: 反叛者
-107: 服装-啤酒节
+107: 啤酒节服饰
 108: 召唤师
 109: 召唤师宝宝
 110: 忍者宝宝
 111: 影狼宝宝
 112: 胧宝宝
-113: 跆拳道宝宝
+113: 跆拳少年宝宝
 114: 拳圣宝宝
 115: 悟灵士宝宝
 116: 神枪手宝宝
