--- a/conf/msg_conf/char_msg_cht.conf
+++ b/conf/msg_conf/char_msg_cht.conf
@@ -11,7 +11,7 @@
 // 因為熊貓模擬器碰到 UTF8-BOM 編碼時, 會在檔案讀取時進行轉碼,
 // 而轉換的目標編碼與運行伺服器的作業系統語言有關係
 //--------------------------------------------------------------
-0: 初心者
+0: 初學者
 1: 劍士
 2: 魔法師
 3: 弓箭手
@@ -25,18 +25,18 @@
 11: 獵人
 12: 刺客
 13: 十字軍
-14: 武道家
+14: 武僧
 15: 賢者
 16: 流氓
-17: 煉金術師
+17: 鍊金術師
 18: 吟遊詩人
 19: 舞孃
-20: 服裝-婚禮
-21: 超級初心者
+20: 婚禮服飾
+21: 超級初學者
 22: 神槍手
 23: 忍者
-24: 服裝-聖誕節
-25: 進階初心者
+24: 聖誕節服飾
+25: 進階初學者
 26: 進階劍士
 27: 進階魔法師
 28: 進階弓箭手
@@ -60,7 +60,7 @@
 43: 搞笑藝人
 //43: Minstrel //IRO Name
 44: 冷艷舞姬
-45: 初心者寶寶
+45: 初學者寶寶
 46: 劍士寶寶
 47: 魔法師寶寶
 48: 弓箭手寶寶
@@ -77,19 +77,19 @@
 59: 武僧寶寶
 60: 賢者寶寶
 61: 流氓寶寶
-62: 煉金術師寶寶
+62: 鍊金術師寶寶
 63: 吟遊詩人寶寶
 64: 舞孃寶寶
-65: 超級初心者寶寶
+65: 超級初學者寶寶
 66: 跆拳少年
 67: 拳聖
 68: 悟靈士
 //79: FREE
 //70: FREE
-71: 服裝-盛夏
+71: 盛夏服飾
 72: Gangsi
-73: 死亡騎士
-74: 黑暗收集者
+73: Death Knight
+74: Dark Collector
 75: 盧恩騎士
 76: 咒術士
 77: 遊俠
@@ -118,13 +118,13 @@
 98: 修羅寶寶
 99: 基因學者寶寶
 100: 魅影追蹤者寶寶
-101: 進階超級初心者
-102: 進階超級初心者寶寶
+101: 進階超級初學者
+102: 進階超級初學者寶寶
 103: 影狼
 104: 朧
-105: 服裝-韓服
+105: 韓國服飾
 106: 反叛者
-107: 服裝-啤酒節
+107: 啤酒節服飾
 108: 召喚師
 109: 召喚師寶寶
 110: 忍者寶寶
