--- a/tools/python/.config.env.sample
+++ b/tools/python/.config.env.sample
@@ -16,14 +16,14 @@ DEFINE_CRASHRPT_APPID=
 # 此选项当前仅允许熊猫模拟器官方发布版使用
 DEFINE_CRASHRPT_PUBLICKEY=
 
-# 远程符号仓库地址
-DEFINE_REMOTE_SYMBOLS_URL=https://github.com/PandasWS/Symbols.git
+# 阿里云 OSS 的终端节点地址
+OSS_SYMBOLS_ENDPOINT=https://
 
-# 归档符号文件后是否进行提交
-# 	0 - 总是提交
-# 	1 - 必须是熊猫模拟器正式版才能提交
-# 	2 - 必须配置了正确的崩溃上报 APPID 才能提交
-DEFINE_SYMBOLS_COMMIT=3
+# 阿里云 OSS 的 Bucket 名称 (无需包含 oss://)
+OSS_SYMBOLS_BUCKET_NAME=
 
-# 自动提交符号信息时显示的仓库名称
-DEFINE_SYMBOLS_SOURCE=PandasWS/Pandas
+# 拥有写入和 list_objects 权限的 Access ID
+OSS_SYMBOLS_FULL_ACCESS_KEY_ID=
+
+# 拥有写入和 list_objects 权限的 Access Key
+OSS_SYMBOLS_FULL_ACCESS_KEY_SECRET=
