--- a/tools/python/Pipfile
+++ b/tools/python/Pipfile
@@ -15,6 +15,7 @@ gitpython = ">=3.1.7"
 python-dotenv = ">=0.14.0"
 PyYAML = ">=5.4.1"
 "ruamel.yaml" = "*"
+oss2 = "*"
 
 [requires]
 python_version = "3"
