修正使用 showexp 指令后呈现的经验值数值会错误的问题

--- a/conf/msg_conf/map_msg.conf
+++ b/conf/msg_conf/map_msg.conf
@@ -1849,7 +1849,10 @@
 
 // Mapflag - nocapture
 3018: Catch pet is prohibited on this map.
-//3019-3021: FREE
+
+// @showexp
+3019: Experience %s Base:%llu (%0.2f%%) Job:%llu (%0.2f%%)
+//3020-3021: FREE
 
 // Battle Configure - show_mob_info
 3022: [%s]
