--- a/conf/msg_conf/map_msg_cht.conf
+++ b/conf/msg_conf/map_msg_cht.conf
@@ -1783,7 +1783,10 @@
 
 // 地圖標記 - nocapture
 3018: 此地圖禁止捕捉寵物, 請離開此地圖後重試.
-//3019-3021: 閒置
+
+// @showexp
+3019: %s基礎經驗:%llu (%0.2f%%) 職業經驗:%llu (%0.2f%%)
+//3020-3021: 閒置
 
 // 戰鬥配置選項 - show_mob_info
 // 讓魔物名稱顯示更多信息時所呈現的具體文本 (感謝「瓜瓜」建議)
