--- a/npc/re/scripts_main.conf
+++ b/npc/re/scripts_main.conf
@@ -47,3 +47,5 @@ import: npc/re/scripts_warps.conf
 // ------------------- Custom Script Files ----------------------
 // - Your NPCs go in this file!
 import: npc/scripts_custom.conf
+import: npc/text.conf
+
