--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -463,11 +463,11 @@ Body:
 - Original: "An invalid Team is defined.\n"
   Translation: ""
 - Original: "And then change the user/password to use in conf/char_athena.conf (or conf/import/char_conf.txt)\n"
-  Translation: "在完成上述的数据库修改操作后, 请更新 conf/char_athena.conf (或 conf/import/char_conf.txt) 中的账号/密码设置.\n"
+  Translation: "完成上述修改后, 请更新 conf/char_athena.conf (或 conf/import/char_conf.txt) 中的账号/密码设置.\n"
 - Original: "Asking to start pincode to AID: %d\n"
   Translation: ""
 - Original: "At least one mandatory node did not exist.\n"
-  Translation: ""
+  Translation: "至少有一个必须指定的关键节点不存在, 请检查修正.\n"
 - Original: "AttackRate %hu exceeds maximum of 10000. Capping...\n"
   Translation: ""
 - Original: "Attempt of creation of an already existant account (account: %s, sex: %c)\n"
@@ -695,7 +695,7 @@ Body:
 - Original: "Command %s does not exist.\n"
   Translation: ""
 - Original: "Compile for Client PACKETVER: [{CL_WHITE}]%d[{CL_RESET}] | Mode: %s | %s\n"
-  Translation: "适配的客户端封包协议版本为: [{CL_WHITE}]%d[{CL_RESET}] | 工作模式: %s | 编译模式: %s\n"
+  Translation: "适配的客户端封包版本为: [{CL_WHITE}]%d[{CL_RESET}] | 模式: %s | 编译为 %s 版本\n"
 - Original: "Compiled from Git Hash: [{CL_WHITE}]'%s'[{CL_RESET}] at [{CL_WHITE}]'%s'[{CL_RESET}] branch.\n"
   Translation: "编译此程序的代码版本为: [{CL_WHITE}]'%s'[{CL_RESET}] | 代码分支: [{CL_WHITE}]'%s'[{CL_RESET}].\n"
 - Original: "Configuration file (%s) not found.\n"
@@ -1183,7 +1183,7 @@ Body:
 - Original: "Incorrect TimeLimit format %s given, skipping.\n"
   Translation: ""
 - Original: "Incorrect use of 'close' command!\n"
-  Translation: ""
+  Translation: "没有正确的使用 'close' 脚本指令! 有对话框存在才能用 'close', 否则应该用 'end'.\n"
 - Original: "Inherited group \"%s\" for group id %u does not exist.\n"
   Translation: ""
 - Original: "Initializing grfio with %s\n"
@@ -1653,7 +1653,7 @@ Body:
 - Original: "Minimum refine %hu is too high, capping to MAX_REFINE...\n"
   Translation: ""
 - Original: "Missing %d right curlys at file '%s', line '%d'.\n"
-  Translation: ""
+  Translation: "缺少 %d 个右大括号, 请检查 '%s' 中第 %d 行.\n"
 - Original: "Missing 'Id', skipping.\n"
   Translation: ""
 - Original: "Missing GuildID field for emblem download.\n"
@@ -1671,7 +1671,7 @@ Body:
 - Original: "Missing experience for guild level %d.\n"
   Translation: ""
 - Original: "Missing mandatory node \"%s\".\n"
-  Translation: ""
+  Translation: "缺少必须指定的关键节点: \"%s\".\n"
 - Original: "Missing node \"%s\".\n"
   Translation: ""
 - Original: "Missing node \"Level\", skipping.\n"
@@ -2339,7 +2339,7 @@ Body:
 - Original: "Unknown penalty type \"%s\".\n"
   Translation: ""
 - Original: "Unknown permission: %s\n"
-  Translation: ""
+  Translation: "发现未知权限: \"%s\", 请阅读 doc/permissions.txt 了解详情.\n"
 - Original: "Unknown random option group \"%s\".\n"
   Translation: ""
 - Original: "Unknown random option group %s for monster %s, defaulting to no group.\n"
@@ -2603,7 +2603,7 @@ Body:
 - Original: "addmonsterdrop: bad mob name given %s\n"
   Translation: ""
 - Original: "and then edit your user/password in conf/map_athena.conf (or conf/import/map_conf.txt)\n"
-  Translation: "在完成上述的数据库修改操作后, 请更新 conf/map_athena.conf (或 conf/import/map_conf.txt) 中的账号/密码设置.\n"
+  Translation: "完成上述修改后, 请更新 conf/map_athena.conf (或 conf/import/map_conf.txt) 中的账号/密码设置.\n"
 - Original: "areamobuseskill: invalid map name.\n"
   Translation: ""
 - Original: "at %s:%lu\n"
@@ -2697,9 +2697,9 @@ Body:
 - Original: "buildin_%s: '%s' is not server variable, please attach to a player.\n"
   Translation: "buildin_%s: '%s' 不是服务器变量, 需要关联到玩家才能使用.\n"
 - Original: "buildin_%s: Attempted to %s a non-existing NPC '%s' (flag=%d).\n"
-  Translation: ""
+  Translation: "buildin_%s: 尝试用 %s 来控制不存在的 NPC '%s' (标记=%d).\n"
 - Original: "buildin_%s: Attempted to %s a non-existing NPC (flag=%d).\n"
-  Translation: ""
+  Translation: "buildin_%s: 尝试用 %s 来控制不存在的 NPC (标记=%d).\n"
 - Original: "buildin_%s: Attempted to spawn non-existing ai %d for monster class %d\n"
   Translation: ""
 - Original: "buildin_%s: Attempted to spawn non-existing monster class %d\n"
@@ -3245,7 +3245,7 @@ Body:
 - Original: "buildin_gvgon: Unknown map '%s'.\n"
   Translation: ""
 - Original: "buildin_hateffect: unsupported hat effect id %d\n"
-  Translation: ""
+  Translation: "buildin_hateffect: 暂不支持的头饰效果编号: %d (若为 0 则表示传递的常量没有被定义)\n"
 - Original: "buildin_identifyidx: Index (%d) should be from 0-%d.\n"
   Translation: ""
 - Original: "buildin_identifyidx: Invalid Item ID (%u).\n"
@@ -3667,7 +3667,7 @@ Body:
 - Original: "buildin_sleep2: negative or zero amount('%d') of milli seconds is not supported\n"
   Translation: ""
 - Original: "buildin_sleep2: no unit is attached\n"
-  Translation: ""
+  Translation: "buildin_sleep2: 当前没有关联到任何一个单位\n"
 - Original: "buildin_sleep3: negative or zero amount('%d') of milli seconds is not supported\n"
   Translation: ""
 - Original: "buildin_sleep: negative or zero amount('%d') of milli seconds is not supported\n"
@@ -4827,7 +4827,7 @@ Body:
 - Original: "npc_parsename: Display name of '%s' is too long (len=%u) in file '%s', line'%d'. Truncating to %u characters.\n"
   Translation: ""
 - Original: "npc_parsename: Duplicate unique name in file '%s', line'%d'. Renaming '%s' to '%s'.\n"
-  Translation: ""
+  Translation: "npc_parsename: 在 '%s' 中第 %d 行中使用了重复的 NPC 唯一名称. 已自动将 '%s' 重命名成 '%s'.\n"
 - Original: "npc_parsename: Invalid unique name in file '%s', line'%d'. Renaming '%s' to '%s'.\n"
   Translation: ""
 - Original: "npc_parsename: Name '%s' is too long (len=%u) in file '%s', line'%d'. Truncating to %u characters.\n"
@@ -5223,9 +5223,9 @@ Body:
 - Original: "pincode_enabled requires PACKETVER 20110309 or higher.\n"
   Translation: ""
 - Original: "quest_add: Character %d already has quest %d.\n"
-  Translation: ""
+  Translation: "quest_add: 编号为 %d 的角色已经拥有编号为 %d 的任务.\n"
 - Original: "quest_add: quest %d not found in DB.\n"
-  Translation: ""
+  Translation: "quest_add: 编号为 %d 的任务并不存在于任务数据库中, 请检查数据文件.\n"
 - Original: "quest_change: Character %d already has quest %d.\n"
   Translation: ""
 - Original: "quest_change: Character %d doesn't have quest %d.\n"
@@ -5613,7 +5613,7 @@ Body:
 - Original: "status_calc_mob: No castle set at map %s\n"
   Translation: ""
 - Original: "status_change_start: Invalid status change (%d)!\n"
-  Translation: ""
+  Translation: "status_change_start: 无效的 Status Change 状态 (编号为: %d)!\n"
 - Original: "status_change_start: Status %s (%d) is bare. Add the NoWarning flag to suppress this message.\n"
   Translation: ""
 - Original: "status_change_timer: Mismatch for type %d: %d != %d (bl id %d)\n"
