实现 reloadlaphinedb 管理员指令, 用于重新加载 Laphine 数据库

--- a/conf/msg_conf/map_msg_chs.conf
+++ b/conf/msg_conf/map_msg_chs.conf
@@ -1785,7 +1785,10 @@
 
 // @showexp
 3019: %s基础经验:%llu (%0.2f%%) 职业经验:%llu (%0.2f%%)
-//3020-3021: 闲置
+
+// @reloadlaphinedb
+3020: 已重新加载 Laphine 数据库.
+//3021: 闲置
 
 // 战斗配置选项 - show_mob_info
 // 让魔物名称显示更多信息时所呈现的具体文本 (感谢“瓜瓜”建议)
@@ -1853,7 +1856,7 @@
 3103: 已激活指定的光环效果.
 3104: 已关闭光环效果.
 3105: 很抱歉, 指定的光环编号无效, 请检查后重新输入.
-3106: 已重新加载光环组合数据库
+3106: 已重新加载光环组合数据库.
 //3107-3110: 闲置
 
 // 离线挂机 - 被私聊时自动回复的信息
