--- a/conf/msg_conf/map_msg_cht.conf
+++ b/conf/msg_conf/map_msg_cht.conf
@@ -1785,7 +1785,10 @@
 
 // @showexp
 3019: %s基礎經驗:%llu (%0.2f%%) 職業經驗:%llu (%0.2f%%)
-//3020-3021: 閒置
+
+// @reloadlaphinedb
+3020: 已重新載入 Laphine 數據庫.
+//3021: 閒置
 
 // 戰鬥配置選項 - show_mob_info
 // 讓魔物名稱顯示更多信息時所呈現的具體文本 (感謝「瓜瓜」建議)
@@ -1853,7 +1856,7 @@
 3103: 已激活指定的光環效果.
 3104: 已關閉光環效果.
 3105: 很抱歉, 指定的光環編號無效, 請檢查後重新輸入.
-3106: 已重新加載光環組合數據庫
+3106: 已重新加載光環組合數據庫.
 //3107-3110: 閒置
 
 // 離線掛機 - 被私聊時自動回復的信息
