--- a/conf/atcommands.yml
+++ b/conf/atcommands.yml
@@ -976,6 +976,12 @@ Body:
   - Command: reloadstatusdb
     Help: |
       重新加载状态配置文档
+  - Command: reloadauradb
+    Help: |
+      重新加载光环组合数据库
+  - Command: reloadlaphinedb
+    Help: |
+      重新加载 Laphine 数据库
   - Command: reload
     Help: |
       参数: <要重载的数据类型>
