--- a/conf/msg_conf/map_msg.conf
+++ b/conf/msg_conf/map_msg.conf
@@ -1854,7 +1854,10 @@
 
 // @showexp
 3019: Experience %s Base:%llu (%0.2f%%) Job:%llu (%0.2f%%)
-//3020-3021: FREE
+
+// @reloadlaphinedb
+3020: Laphine database has been reloaded.
+//3021: FREE
 
 // Battle Configure - show_mob_info
 3022: [%s]
