--- a/conf/msg_conf/map_msg.conf
+++ b/conf/msg_conf/map_msg.conf
@@ -1968,6 +1968,9 @@
 // @reloadlaphinedb
 3142: Laphine database has been reloaded.
 
+// @reloadbarterdb
+3143: Barters database has been reloaded.
+
 // Commercial
 3200: Standard Free License
 3201: Commercial License
