--- a/conf/msg_conf/map_msg_chs.conf
+++ b/conf/msg_conf/map_msg_chs.conf
@@ -1893,11 +1893,14 @@
 3138:    - %s: %d%s x %d 个
 3139: ......等
 
-3140: 由于游戏管理员变更了商店扩充配置, 您需要重新开设商店...
-3141: 由于游戏管理员变更了商店扩充配置, 您暂时无法与此商店进行交易.
+3140: 由于管理员变更了商店扩充配置, 您需要重新开设商店...
+3141: 由于管理员变更了商店扩充配置, 您暂时无法与此商店进行交易.
 
 // @reloadlaphinedb
 3142: 已重新加载 Laphine 数据库.
+
+// @reloadbarterdb
+3143: 已重新加载 Barters 以物易物数据库.
 
 // Commercial
 3200: 免费授权
