--- a/conf/msg_conf/map_msg_cht.conf
+++ b/conf/msg_conf/map_msg_cht.conf
@@ -1893,11 +1893,14 @@
 3138:    - %s: %d%s x %d 個
 3139: ......等
 
-3140: 由於遊戲管理員變更了商店擴充配置, 您需要重新開設商店...
-3141: 由於遊戲管理員變更了商店擴充配置, 您暫時無法與此商店進行交易.
+3140: 由於管理員變更了商店擴充配置, 您需要重新開設商店...
+3141: 由於管理員變更了商店擴充配置, 您暫時無法與此商店進行交易.
 
 // @reloadlaphinedb
 3142: 已重新載入 Laphine 數據庫.
+
+// @reloadbarterdb
+3143: 已重新載入 Barters 以物易物數據庫.
 
 // Commercial
 3200: 免費授權
