- [新增] 账号共享任务

--- a/conf/inter_athena.conf
+++ b/conf/inter_athena.conf
@@ -187,6 +187,7 @@ mail_db: mail
 mail_attachment_db: mail_attachments
 auction_db: auction
 quest_db: quest
+quest_db_acc: quest_acc
 homunculus_db: homunculus
 skill_homunculus_db: skill_homunculus
 mercenary_db: mercenary
