- 完成基本功能: 1.无断线跨服 2.跨服玩家同屏显示 3.跨服可交易 4.角色状态&角色背包正确保存 - 进度: 15%

--- a/conf/inter_athena.conf
+++ b/conf/inter_athena.conf
@@ -6,6 +6,10 @@
 // 注释信息您可以随意修改, 不会干扰服务器的任何行为. 
 //--------------------------------------------------------------
 
+// 启用跨服服务
+// 本服将被指定为中立服务器
+cross_server: on
+
 // 是否不主动返回服务器的 IP 地址给到客户端?
 // 若您希望使用负载均衡或者反向代理等方式来提供服务,
 // 且希望能更好的隐藏真实服务器 IP 地址, 那么请启用此选项.
@@ -66,9 +70,9 @@ default_codepage: auto
 // 注意: login_server_ip 如果是域名, 那么禁止超过 63 个字符 (包括标点符号)
 login_server_ip: 127.0.0.1
 login_server_port: 3306
-login_server_id: ragnarok
-login_server_pw: ragnarok
-login_server_db: ragnarok
+login_server_id: root
+login_server_pw: root
+login_server_db: ragnarok_test_main
 login_codepage: 
 login_case_sensitive: no
 
@@ -77,9 +81,9 @@ login_case_sensitive: no
 // 注意: ipban_db_ip 如果是域名, 那么禁止超过 63 个字符 (包括标点符号)
 ipban_db_ip: 127.0.0.1
 ipban_db_port: 3306
-ipban_db_id: ragnarok
-ipban_db_pw: ragnarok
-ipban_db_db: ragnarok
+ipban_db_id: root
+ipban_db_pw: root
+ipban_db_db: ragnarok_test_main
 ipban_codepage: 
 
 // 角色服务器专用
@@ -87,9 +91,9 @@ ipban_codepage:
 // 注意: char_server_ip 如果是域名, 那么禁止超过 63 个字符 (包括标点符号)
 char_server_ip: 127.0.0.1
 char_server_port: 3306
-char_server_id: ragnarok
-char_server_pw: ragnarok
-char_server_db: ragnarok
+char_server_id: root
+char_server_pw: root
+char_server_db: ragnarok_test_main
 char_codepage: 
 
 // 地图服务器专用
@@ -97,9 +101,9 @@ char_codepage:
 // 注意: map_server_ip 如果是域名, 那么禁止超过 63 个字符 (包括标点符号)
 map_server_ip: 127.0.0.1
 map_server_port: 3306
-map_server_id: ragnarok
-map_server_pw: ragnarok
-map_server_db: ragnarok
+map_server_id: root
+map_server_pw: root
+map_server_db: ragnarok_test_main
 map_codepage: 
 
 // WEB 接口服务器专用
@@ -110,9 +114,9 @@ map_codepage:
 // 这样才能让 WEB 服务器可以访问持有这两个表的数据库.
 web_server_ip: 127.0.0.1
 web_server_port: 3306
-web_server_id: ragnarok
-web_server_pw: ragnarok
-web_server_db: ragnarok
+web_server_id: root
+web_server_pw: root
+web_server_db: ragnarok_test_web
 web_codepage:
 
 // 登录、地图服务器共用
@@ -120,9 +124,9 @@ web_codepage:
 // 注意: log_db_ip 如果是域名, 那么禁止超过 63 个字符 (包括标点符号)
 log_db_ip: 127.0.0.1
 log_db_port: 3306
-log_db_id: ragnarok
-log_db_pw: ragnarok
-log_db_db: ragnarok
+log_db_id: root
+log_db_pw: root
+log_db_db: ragnarok_test_log
 log_codepage: 
 log_login_db: loginlog
 
