- fix 大量技能的成功显示 - bug 虚假实体残留(没有意义的分身bug) - update 名字获取,名字前缀等 - 进度 25%

--- a/conf/cross_server/server-2.conf
+++ b/conf/cross_server/server-2.conf
@@ -1,23 +1,24 @@
-//è¿å…¥æ­¤ä¸­ç«‹æœåŠ¡å™¨çš„æœåŠ¡id,æ­¤idå¿…é¡»ä¸ "è¯¥æœåŠ¡å™¨ä¸Šinter_athena.confä¸­çš„cross_server_idçš„å€¼ä¸€è‡´,åŒæ—¶å¿…é¡» > 0ä¸”å”¯ä¸€
-//è¯·åŠ¡å¿…å†ä¸‰ç¡®è®¤
+//Á¬Èë´ËÖĞÁ¢·şÎñÆ÷µÄ·şÎñid,´Ëid±ØĞëÓë "¸Ã·şÎñÆ÷ÉÏinter_athena.confÖĞµÄcross_server_idµÄÖµÒ»ÖÂ,Í¬Ê±±ØĞë > 0ÇÒÎ¨Ò»
+//ÇëÎñ±ØÔÙÈıÈ·ÈÏ
 server_id: 2
+server_name: [B·ş]
 
-// cross_server_id == server_id çš„è§’è‰²æœåŠ¡å™¨çš„ip,ç«¯å£
+// cross_server_id == server_id µÄ½ÇÉ«·şÎñÆ÷µÄip,¶Ë¿Ú
 char_server_ip: 127.0.0.1
 char_server_port: 6122
-// è§’è‰²æœåŠ¡å™¨çš„ MySQL è¿æ¥é…ç½®ä¿¡æ¯
-// æ³¨æ„: char_server_ip å¦‚æœæ˜¯åŸŸå, é‚£ä¹ˆç¦æ­¢è¶…è¿‡63ä¸ªå­—ç¬¦(åŒ…æ‹¬æ ‡ç‚¹ç¬¦å·)
+// ½ÇÉ«·şÎñÆ÷µÄ MySQL Á¬½ÓÅäÖÃĞÅÏ¢
+// ×¢Òâ: char_server_ip Èç¹ûÊÇÓòÃû, ÄÇÃ´½ûÖ¹³¬¹ı63¸ö×Ö·û(°üÀ¨±êµã·ûºÅ)
 char_server_database_ip: 127.0.0.1
 char_server_database_port: 3306
 char_server_database_id: root
 char_server_database_pw: root
 char_server_database_db: ragnarok_test_1_main
 
-// cross_server_id == server_id çš„åœ°å›¾æœåŠ¡å™¨çš„ip,ç«¯å£
-// æ³¨æ„: map_server_ip å¦‚æœæ˜¯åŸŸå, é‚£ä¹ˆç¦æ­¢è¶…è¿‡63ä¸ªå­—ç¬¦(åŒ…æ‹¬æ ‡ç‚¹ç¬¦å·)
+// cross_server_id == server_id µÄµØÍ¼·şÎñÆ÷µÄip,¶Ë¿Ú
+// ×¢Òâ: map_server_ip Èç¹ûÊÇÓòÃû, ÄÇÃ´½ûÖ¹³¬¹ı63¸ö×Ö·û(°üÀ¨±êµã·ûºÅ)
 map_server_ip: 127.0.0.1
 map_server_port: 5121
-// åœ°å›¾æœåŠ¡å™¨çš„ MySQL è¿æ¥é…ç½®ä¿¡æ¯
+// µØÍ¼·şÎñÆ÷µÄ MySQL Á¬½ÓÅäÖÃĞÅÏ¢
 map_server_database_ip: 127.0.0.1
 map_server_database_port: 3306
 map_server_database_id: root
@@ -25,8 +26,8 @@ map_server_database_pw: root
 map_server_database_db: ragnarok_test_1_main
 
 
-// æ—¥å¿—æ•°æ®åº“çš„ MySQL è¿æ¥é…ç½®ä¿¡æ¯
-// æ³¨æ„: log_db_ip å¦‚æœæ˜¯åŸŸå, é‚£ä¹ˆç¦æ­¢è¶…è¿‡63ä¸ªå­—ç¬¦(åŒ…æ‹¬æ ‡ç‚¹ç¬¦å·)
+// ÈÕÖ¾Êı¾İ¿âµÄ MySQL Á¬½ÓÅäÖÃĞÅÏ¢
+// ×¢Òâ: log_db_ip Èç¹ûÊÇÓòÃû, ÄÇÃ´½ûÖ¹³¬¹ı63¸ö×Ö·û(°üÀ¨±êµã·ûºÅ)
 log_db_database_ip: 127.0.0.1
 log_db_database_port: 3306
 log_db_database_id: root
