--- a/conf/cross_server/base.conf
+++ b/conf/cross_server/base.conf
@@ -1,6 +1,6 @@
 //加载接入中立服务器的服务器配置
 
 import: conf/cross_server/server-1.conf
-//import: conf/cross_server/server-2.conf
+import: conf/cross_server/server-2.conf
 
 //其他设定暂时hardcore
