- fix 角色1、2之间使用单体技能 - fix 角色1对其他使用单体技能 - fix 角色对自身使用技能

--- a/db/re/item_db_equip.yml
+++ b/db/re/item_db_equip.yml
@@ -25508,6 +25508,7 @@ Body:
     Script: |
       skill "GC_CLOAKINGEXCEED",5;
       skill "AS_CLOAKING",10;
+      bonus bIntravision;
   - Id: 2302
     AegisName: Cotton_Shirt_
     Name: Cotton Shirt
