- fix 正确分开存储跨服和中立服的部分数据(如party,guild)等 - ↑ 但尚未解决读取问题

--- a/conf/cross_server/server-1.conf
+++ b/conf/cross_server/server-1.conf
@@ -1,4 +1,4 @@
-//连入此中立服务器的服务id,此id必须与 "该服务器上inter_athena.conf中的cross_server_id的值一致,同时必须 > 0且唯一
+//连入此中立服务器的服务id,此id必须互斥
 //请务必再三确认
 server_id: 1
 server_name: [A服]
