--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -4,8 +4,8 @@
 Body:
 - Original: "[{CL_BLUE}][Cross Server][{CL_RESET}]Cross Server Set: %s\n"
   Translation: "[{CL_BLUE}][跨服处理][{CL_RESET}]中立服务器开关 %s\n"
-- Original: "[{CL_BLUE}][Cross Server][{CL_RESET}]Send User:%s Token:%d To Map Server[%d]...\n"
-  Translation: "[{CL_BLUE}][跨服处理][{CL_RESET}]发送角色: %s 的令牌1: %d 至 地图服务器[%d]...\n"
+- Original: "[{CL_BLUE}][Cross Server][{CL_RESET}]Attempting to connect to CS Char Server. Please wait.\n"
+  Translation: "[{CL_BLUE}][跨服处理][{CL_RESET}]正在尝试连接到中立角色服务器 请稍候...\n"
 - Original: "[{CL_BLUE}][Cross Server][{CL_RESET}]Attempting to connect to Char Server [%d]. Please wait.\n"
   Translation: "[{CL_BLUE}][跨服处理][{CL_RESET}]正在尝试连接到角色服务器 [%d], 请稍候...\n"
 - Original: "[{CL_BLUE}][Cross Server][{CL_RESET}]This Char Server [Cross Server Marked ID] is %d from Main Cross Server.\n"
@@ -20,6 +20,8 @@ Body:
   Translation: "[{CL_BLUE}][跨服处理][{CL_RESET}]数据库无法建立连接. uname='%s',passwd='%s',port='%d',database='%s'\n"
 - Original: "[{CL_BLUE}][Cross Server][{CL_RESET}]Connect success! (Cross Map Server Database Connection)\n"
   Translation: "[{CL_BLUE}][跨服处理][{CL_RESET}]连接成功! (中立服务器与所有跨服的地图服务器的数据库的连接)\n"
+- Original: "[{CL_BLUE}][Cross Server][{CL_RESET}]Send User:%s Token:%d To Map Server[%d]...\n"
+  Translation: "[{CL_BLUE}][跨服处理][{CL_RESET}]发送角色: %s 的令牌1: %d 至 地图服务器[%d]...\n"
 - Original: "[{CL_BLUE}][Cross Server][{CL_RESET}]Id:[{CL_LT_YELLOW}]%d[{CL_RESET}] is fake,it's real id is:[{CL_LT_YELLOW}]%d[{CL_RESET}].\n"
   Translation: "[{CL_BLUE}][跨服处理][{CL_RESET}]Id:[{CL_LT_YELLOW}]%d[{CL_RESET}]是伪Id,它的真实值是:[{CL_LT_YELLOW}]%d[{CL_RESET}].\n"
 - Original: "\t admin:@<atcommand> => Uses an atcommand. Do NOT use commands requiring an attached player.\n"
