- update base.conf预定实现的选项 - 移动base.conf的选项至conf/battle/crosseserver.conf - 修正server.conf.default的内容

--- a/conf/cross_server/base.conf
+++ b/conf/cross_server/base.conf
@@ -1,40 +1,6 @@
 //加载接入中立服务器的服务器配置
 
 import: conf/cross_server/server-1.conf
-//import: conf/cross_server/server-2.conf
+import: conf/cross_server/server-2.conf
 
-//其他设定暂时hardcore
-
-//====================预定加入的功能====================
-
-//所有以//注释的功能均未实现
-
-//====================以下为影响不同服之间的物品流通的选项====================
-//如不想有任何互通,请在原来其他的conf中设置
-//禁止交易、交易邮件、禁止舍弃物品等设定
-//以及不启用diff_server_guild_join或不设置公会仓库的npc选项
-
-//是否允许不同服务器的玩家相互交易
-//注意①: 必须先允许交易
-//注意②: 如同时开启允许舍弃东西到地面,或者邮件等等将意义不大
-//diff_server_trade: no
-
-//是否允许不同服务器的玩家相互发邮件
-//注意①: 必须先允许邮件
-//diff_server_mail: no
-
-//是否允许不同服务器的玩家购买对方的露天商店物品
-//注意①: 必须先允许露天商店贩卖
-//diff_server_vending: no
-
-
-//====================队伍以及公会相关限制====================
-//是否允许不同服务器的玩家加入对方的队伍
-//diff_server_party_join: no
-
-//是否允许不同服务器的玩家加入对方的公会
-//diff_server_guild_join: no
-
-
-
-//=====================================================
+//其他设定放在了conf/battle/crossserver.conf
